<resources>
    <string name="app_name">TravelGuide</string>
    <string name="logout">Logout</string>
    <string name="share_trip">Compartilhar</string>

    <string name="error_api_key">Google Places API incorreta</string>
    <string name="add_trip_title">Criar Viagem</string>
    <string name="select_place">Selecione o local</string>
    <string name="error_searching_places">Erro ao buscar local. Por favor tente novamente</string>
    <string name="select_start_date">Selecione a data de início</string>
    <string name="select_end_date">Selecione a data de término</string>
    <string name="save">Salvar</string>
    <string name="trip_saved">Viagem salva</string>
    <string name="spot_header">Planejamento</string>
    <string name="spot_description">Informe uma descrição</string>
    <string name="add_spot">Adicionar Local</string>
    <string name="spot_required_message">Informe local e data</string>
    <string name="spot_saved">Local adicionado</string>
    <string name="mock_spot_description">Uma descricao muito longa com a forma de cdemosntrar como o layout se comporta com esse tamanho todo de caracteres</string>
    <string name="appwidget_text">TravelGuide</string>
    <string name="add_trip_tip">Clique no + para adicionar uma viagem</string>
    <string name="image_description">Imagem da viagem</string>
    <string name="directions_description">Localização do ponto</string>
    <string name="no_spots_added">Você precisa adicionar um local a viagem</string>
    <string name="adding_trip_message">Salvando viagem...</string>
    <string name="adding_trip_message_title">Aguarde</string>
</resources>
