<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <EditText
        android:id="@+id/et_place_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:drawableLeft="@drawable/ic_pin"
        android:focusable="false"
        android:drawablePadding="@dimen/ic_padding"
        android:hint="@string/select_place"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_trip_start_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:drawableLeft="@drawable/ic_cal"
        android:focusable="false"
        android:drawablePadding="@dimen/ic_padding"
        android:hint="@string/select_start_date"
        app:layout_constraintEnd_toEndOf="@id/et_place_picker"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/et_place_picker"
        app:layout_constraintTop_toBottomOf="@id/et_place_picker"  />

    <EditText
        android:id="@+id/et_trip_end_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:drawableLeft="@drawable/ic_cal"
        android:focusable="false"
        android:drawablePadding="@dimen/ic_padding"
        android:hint="@string/select_end_date"
        app:layout_constraintEnd_toEndOf="@id/et_trip_start_date"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/et_trip_start_date"
        app:layout_constraintTop_toBottomOf="@id/et_trip_start_date"  />

    <TextView
        android:id="@+id/tv_spot_intro"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/et_trip_end_date"
        app:layout_constraintStart_toStartOf="@id/et_trip_end_date"
        app:layout_constraintEnd_toEndOf="@id/et_trip_end_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/spot_header"
        style="@style/TextAppearance.TravelGuide.Headline6"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_spot_list"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/tv_spot_intro"
        app:layout_constraintStart_toStartOf="@id/tv_spot_intro"
        app:layout_constraintEnd_toEndOf="@id/tv_spot_intro"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:listitem="@layout/spot_item"
        />

</android.support.constraint.ConstraintLayout>