<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.SpotActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="4dp"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:popupTheme="@style/AppTheme.PopupOverlay"
            style="@style/Widget.TravelGuide.Toolbar"
            app:layout_collapseMode="pin" />
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="62dp">

        <EditText
            android:id="@+id/et_spot_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:drawableStart="@drawable/ic_pin"
            android:drawablePadding="@dimen/ic_padding"
            android:focusable="false"
            android:hint="@string/select_place" />

        <EditText
            android:id="@+id/et_spot_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:drawableStart="@drawable/ic_cal"
            android:drawablePadding="@dimen/ic_padding"
            android:focusable="false"
            android:hint="@string/select_start_date" />

        <EditText
            android:id="@+id/et_spot_description"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_margin="16dp"
            android:background="@drawable/text_layout_stroke_normal"
            android:gravity="top"
            android:hint="@string/spot_description"
            android:inputType="textMultiLine"
            android:overScrollMode="always"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical" />
    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>